corrigindo problemas ao usar o plugin no ICMS-IPI